--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
-  "name": "chakra-vite-starter",
+  "name": "vip-flow",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "build-storybook": "storybook build",
-    "storybook": "storybook dev -p 6006"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@apideck/components": "^0.12.16",
-    "@apideck/file-picker-js": "^1.0.2",
-    "@apideck/node": "^3.0.1",
-    "@bytescale/upload-widget-react": "^4.11.0",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.7.0",
     "@emotion/react": "^11.11.0",
@@ -24,7 +18,6 @@
     "@types/styled-components": "^5.1.26",
     "axios": "^1.6.0",
     "framer-motion": "^10.12.16",
-    "keen-slider": "^6.8.6",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
@@ -54,7 +47,6 @@
     "@types/react-slick": "^0.23.11",
     "@vitejs/plugin-react-swc": "^3.3.1",
     "chromatic": "^6.19.9",
-    "storybook": "^7.1.0",
     "typescript": "^5.0.4",
     "vite": "^4.3.9"
   }
