--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.7.0",
-    "@emotion/react": "^11.11.0",
+    "@chec/commerce.js": "^2.8.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/chakra-petch": "^5.0.5",
     "@fontsource/inter": "^5.0.15",
     "@fontsource/roboto-mono": "^5.0.15",
+    "@mui/system": "^5.14.20",
+    "@types/chec__commerce.js": "^2.8.11",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.6.0",
     "framer-motion": "^10.12.16",
+    "prop-types": "^15.8.1",
     "qrcode.react": "^3.1.0",
+    "ra-data-json-server": "^4.16.2",
     "react": "^18.2.0",
+    "react-admin": "^4.16.2",
     "react-color": "^2.19.3",
+    "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-h5-audio-player": "^3.8.6",
@@ -41,6 +48,7 @@
     "@types/google.maps": "^3.54.6",
     "@types/react": "^18.2.7",
     "@types/react-color": "^3.0.7",
+    "@types/react-datepicker": "^4.19.3",
     "@types/react-dom": "^18.2.4",
     "@types/react-slick": "^0.23.11",
     "@vitejs/plugin-react-swc": "^3.3.1",
