--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@fontsource/chakra-petch": "^5.0.5",
     "@fontsource/inter": "^5.0.15",
     "@fontsource/roboto-mono": "^5.0.15",
+    "@lourenci/react-kanban": "^2.1.0",
     "@mui/system": "^5.14.20",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.1",
     "@types/chec__commerce.js": "^2.8.11",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.6.0",
