--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.7.0",
-    "@chec/commerce.js": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/chakra-petch": "^5.0.5",
     "@fontsource/inter": "^5.0.15",
     "@fontsource/roboto-mono": "^5.0.15",
-    "@lourenci/react-kanban": "^2.1.0",
+    "@headlessui/react": "^1.7.4",
+    "@heroicons/react": "^1.0.6",
     "@mui/system": "^5.14.20",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@react-google-maps/api": "^2.19.2",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.1",
+    "@tailwindcss/forms": "^0.5.2",
     "@types/chec__commerce.js": "^2.8.11",
     "@types/styled-components": "^5.1.26",
-    "axios": "^1.6.0",
+    "axios": "^1.6.3",
+    "date-fns": "^2.29.3",
+    "focus-visible": "^5.2.0",
     "framer-motion": "^10.12.16",
     "prop-types": "^15.8.1",
     "qrcode.react": "^3.1.0",
@@ -38,13 +43,13 @@
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.4.0",
     "react-player": "^2.12.0",
-    "react-qrcode-logo": "^2.9.0",
     "react-redux": "^8.1.1",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.14.1",
     "react-select": "^5.7.4",
     "react-slick": "^0.29.0",
-    "react-spring": "^9.7.2",
+    "react-use-keypress": "^1.3.1",
+    "react-use-measure": "^2.1.1",
     "styled-components": "^6.0.3"
   },
   "devDependencies": {
@@ -55,7 +60,10 @@
     "@types/react-dom": "^18.2.4",
     "@types/react-slick": "^0.23.11",
     "@vitejs/plugin-react-swc": "^3.3.1",
+    "autoprefixer": "^10.4.16",
     "chromatic": "^6.19.9",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.0.4",
     "vite": "^4.3.9"
   }
