--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "@types/chec__commerce.js": "^2.8.11",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.6.3",
+    "clsx": "^2.1.0",
     "date-fns": "^2.29.3",
     "focus-visible": "^5.2.0",
-    "framer-motion": "^10.12.16",
+    "framer-motion": "^10.18.0",
     "prop-types": "^15.8.1",
     "qrcode.react": "^3.1.0",
     "ra-data-json-server": "^4.16.2",
@@ -50,7 +51,8 @@
     "react-slick": "^0.29.0",
     "react-use-keypress": "^1.3.1",
     "react-use-measure": "^2.1.1",
-    "styled-components": "^6.0.3"
+    "styled-components": "^6.0.3",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@types/google.maps": "^3.54.6",
@@ -63,7 +65,7 @@
     "autoprefixer": "^10.4.16",
     "chromatic": "^6.19.9",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.0.4",
     "vite": "^4.3.9"
   }
